--- a/styles/HomePageStyle.css
+++ b/styles/HomePageStyle.css
@@ -28,12 +28,16 @@ body {
     position: relative;
 }
 
+#main-menu {
+    overflow-y: hidden;
+}
+
 .gradient-circle {
     position: absolute;
     top: -250px;
     left: 50%;
     transform: translateX(-50%);
-    width: 600px;
+    width: 100%;
     height: 500px;
     background: var(--top-radial-gradient);
     opacity: 0.5;
@@ -67,8 +71,13 @@ body {
     position: relative;
     min-height: 100vh;
     padding: 15px 15px 100px;
+}
+
+.section {
+
+    flex: 1;
     overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
+    padding-bottom: 50px;
 }
 
 h2 {
