--- a/styles/ProductDetailsStyle.css
+++ b/styles/ProductDetailsStyle.css
@@ -1,50 +1,93 @@
 .nft-details-panel {
-    position: fixed; /* Панель фиксирована поверх всего контента */
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: #fff;
-    overflow-y: auto; /* Скролл внутри панели */
-    z-index: 2000; /* Гарантированно поверх всех элементов */
-    padding: 20px;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--white);
+    z-index: 9998;
+
+    display: none;
+    flex-direction: column;
+}
+
+.nft-details-panel.show {
+    display: flex;
+}
+
+.nft-details-panel .panel-content {
+    flex: 1;
+    overflow-y: auto;
+    padding: 20px 20px 100px;
     box-sizing: border-box;
-    display: none; /* Изначально скрыта */
-}
-
-.panel-content {
-    max-width: 500px;
-    margin: 0 auto;
-    text-align: left;
-}
-
-.panel-content img {
     width: 100%;
-    border-radius: 16px;
-    margin-bottom: 15px;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.panel-content h4 {
+    margin: 10px 0 2px;
 }
 
 .close-panel {
-    background-color: transparent;
+    background: none;
     border: none;
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
-    margin-bottom: 20px;
+}
+
+.nft-image {
+    width: 100%;
+    border-radius: 16px;
 }
 
 .nft-title {
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-size: 22px;
+}
+
+#nft-description, #nft-collection {
+    margin: 0;
+    color: var(--text-color-light);
+}
+
+.nft-price-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    flex-wrap: wrap;
+    font-weight: bold;
+    color: var(--black);
+    font-size: 18px;
+    margin-top: -15px;
+}
+
+.price-block {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: var(--black);
+}
+
+.price-icon {
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+    vertical-align: middle;
+}
+
+.price-separator {
+    font-weight: normal;
 }
 
 .add-to-cart-button {
-    background-color: #FF7043;
-    color: white;
-    padding: 10px 20px;
+    background: var(--primary);
+    color: var(--white);
     border: none;
     border-radius: 20px;
-    cursor: pointer;
+    padding: 12px;
     width: 100%;
+    font-size: 16px;
     margin-top: 20px;
+    cursor: pointer;
 }
