--- a/styles/TrendingsPageStyle.css
+++ b/styles/TrendingsPageStyle.css
@@ -12,7 +12,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    margin: 0;
+    margin-bottom: 0
 }
 
 #trending-nfts .card img {
@@ -32,16 +32,11 @@
 #trending-nfts .collection {
     font-size: 13px;
     color: var(--text-color);
-    margin-bottom: 5px;
 }
 
-#trending-nfts .price {
-    font-weight: bold;
-    margin-top: auto;
-    margin-bottom: 10px;
-}
 
 #trending-nfts .card-btn {
+    margin-top: auto;
     padding: 6px 12px;
     background-color: var(--primary);
     color: var(--white);
