--- a/styles/CartPageStyle.css
+++ b/styles/CartPageStyle.css
@@ -2,7 +2,7 @@
     max-width: 100vw;
     box-sizing: border-box;
     padding: 10px;
-    margin-top: 40px;
+    margin-top: 10px;
     background: var(--white);
     overflow-x: hidden;
 }
@@ -39,6 +39,13 @@
     top: 0;
 }
 
+.no-items-cart {
+    background-color: var(--white);
+    box-shadow: 0 4px 12px var(--box-shadow-soft);
+    border-radius: 15px;
+    padding: 16px;
+}
+
 .user-detail {
     display: flex;
     align-items: center;
@@ -60,6 +67,9 @@
 
 }
 
+.your-cart-title {
+
+}
 
 .cart-item {
     margin-bottom: 20px;
