--- a/styles/ProductDetailsStyle.css
+++ b/styles/ProductDetailsStyle.css
@@ -15,14 +15,15 @@
     display: flex;
 }
 
-.nft-details-panel .panel-content {
-    flex: 1;
+.panel-content {
     overflow-y: auto;
-    padding: 20px 20px 100px;
+    padding: 20px ;
     box-sizing: border-box;
-    width: 100%;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 0 10px;
+    background-color: var(--white);
+    border-radius: 12px;
+    box-shadow: 0 2px 6px var(--box-shadow-soft);
 }
 
 .panel-content h4 {
