--- a/styles/CartPageStyle.css
+++ b/styles/CartPageStyle.css
@@ -2,7 +2,7 @@
     max-width: 100vw;
     box-sizing: border-box;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 40px;
     background: var(--white);
     overflow-x: hidden;
 }
@@ -21,7 +21,7 @@
     overflow-x: auto;
     box-sizing: border-box;
     background-color: var(--white);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 12px var(--box-shadow-soft);
     z-index: 1000;
     padding: 15px 20px;
     display: flex;
