--- a/styles/HomePageStyle.css
+++ b/styles/HomePageStyle.css
@@ -121,11 +121,11 @@ h2 {
 
 .bonuses {
     font-size: 20px;
-    color: var(--text-color);
+    color: #fff;
 
     line-height: 1.4;
     margin-top: 10px;
-    background: var(--bg-color-light);
+    background: var(--primary);
     padding: 10px;
     border-radius: 10px;
     text-align: center;
@@ -134,8 +134,8 @@ h2 {
 .bonuses p {
     margin: 0;
     padding: 0;
-    font-size: 13px;
-    color: var(--text-color);
+    font-size: 16px;
+    color: #fff;
 }
 
 .footer {
