--- a/styles/CategoryPageStyle.css
+++ b/styles/CategoryPageStyle.css
@@ -34,6 +34,10 @@
     border-top-right-radius: 18px;
 }
 
+.nft-title {
+    text-align: center;
+}
+
 .nft-card h4 {
     font-size: 16px;
     font-weight: 600;
@@ -42,7 +46,8 @@
 }
 
 .nft-card p {
-    font-size: 16px;
+    text-align: center;
+    font-size: 12px;
     color: #666;
     margin-bottom: 8px;
 }
