--- a/styles/HomePageStyle.css
+++ b/styles/HomePageStyle.css
@@ -183,6 +183,8 @@ h2 {
 .nav-item.active .nav-icon {
     transform: scale(1.3);
     transition: transform 0.3s ease;
+    filter: brightness(0) saturate(100%) invert(27%) sepia(89%) saturate(2593%) hue-rotate(201deg) brightness(96%) contrast(97%);
+
 }
 
 .cart {
