--- a/styles/UserPageStyle.css
+++ b/styles/UserPageStyle.css
@@ -146,7 +146,6 @@
 }
 
 .level-benefits.open p {
-    display: block;
     font-weight: normal;
     content: "🔼";
 }
@@ -244,6 +243,7 @@
 
 .level-btn.open .collapsable-content {
     display: flex;
+    flex-direction: column;
 }
 
 .level-title {
