--- a/styles/HomePageStyle.css
+++ b/styles/HomePageStyle.css
@@ -119,6 +119,50 @@ h2 {
     border-radius: 15px;
 }
 
+.liquidity-card {
+    background: var(--white);
+    border-radius: 12px;
+    box-shadow: 0 4px 6px var(--box-shadow-soft);
+    padding: 12px;
+}
+
+.liquidity-bar {
+    width: 100%;
+    height: 10px;
+    background: #ddd;
+    border-radius: 8px;
+    margin-top: 8px;
+    overflow: hidden;
+}
+
+.liquidity-fill {
+    height: 100%;
+    background-color: #4caf50;
+    transition: width 0.5s ease;
+}
+
+.liquidity-text {
+    font-weight: 500;
+    margin-bottom: 6px;
+    text-align: center;
+    color: var(--text-color);
+}
+
+.liquidity-icon {
+    width: 25px;
+    height: 16px;
+    vertical-align: middle;
+    margin-left: 4px;
+}
+
+.liquidity-timer {
+    font-size: 12px;
+    margin-top: 6px;
+    color: #666;
+    text-align: center;
+
+}
+
 .bonuses {
     font-size: 20px;
     color: #fff;
@@ -191,6 +235,7 @@ h2 {
     position: relative;
 }
 
+
 .cart-count {
     position: absolute;
     top: -7px;
@@ -207,4 +252,7 @@ h2 {
     border-radius: 50%;
     pointer-events: none;
 }
+
+
+
 
