--- a/styles/CartPageStyle.css
+++ b/styles/CartPageStyle.css
@@ -71,15 +71,14 @@
 }
 
 .cart-item {
-    margin-bottom: 20px;
 }
 
 .cart-card {
     position: relative;
     background: white;
-    border-radius: 16px;
-    padding: 15px 15px 15px 0px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+    border-radius: 10px;
+    padding: 5px 15px;
+    box-shadow: 0 4px 8px var(--box-shadow-soft);
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -94,6 +93,7 @@
 .cart-item-info .cart-item-title {
     font-size: 16px;
     margin: 0;
+    padding-right: 25px;
 }
 
 .cart-item-collection {
@@ -272,8 +272,8 @@
 }
 
 .cart-item-image.large {
-    width: 140px;
-    height: 140px;
+    width: 100px;
+    height: 100px;
     border-radius: 12px;
     object-fit: cover;
 }
@@ -298,7 +298,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
-    margin-bottom: 8px;
+    margin-top: 8px;
 }
 
 .cart-btn {
@@ -389,41 +389,6 @@
     color: #0077cc;
 }
 
-/* Rent секция */
-.rent-section {
-    background: #f7f7f7;
-    border-radius: 10px;
-    padding: 10px;
-    box-shadow: 0 4px 8px var(--bg-color-light);
-}
-
-.rent-durations {
-    display: flex;
-    gap: 8px;
-    margin-bottom: 10px;
-    flex-wrap: wrap;
-}
-
-.rent-duration-btn {
-    padding: 6px 10px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background: #fff;
-    cursor: pointer;
-    font-size: 14px;
-}
-
-.rent-duration-btn.selected {
-    background-color: #bde0fe;
-    border-color: #339af0;
-    color: #0077cc;
-}
-
-.rent-price-display {
-    font-size: 14px;
-    margin-bottom: 10px;
-}
-
 /* Кнопки Buy / Rent */
 .rent-now-btn,
 .buy-now-btn {
@@ -445,10 +410,3 @@
     background-color: #007bff;
 }
 
-.rent-now-btn:hover {
-    background-color: #218838;
-}
-
-.buy-now-btn:hover {
-    background-color: #0069d9;
-}
