--- a/styles/HomePageStyle.css
+++ b/styles/HomePageStyle.css
@@ -51,7 +51,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 120px;
+    margin-top: 70px;
 }
 
 .logo-image {
@@ -140,10 +140,19 @@ h2 {
 }
 
 .liquidity-text {
+    display: flex;
+    flex-direction: column;
     font-weight: 500;
     margin-bottom: 6px;
     text-align: center;
+    font-size: 20px;
+    color: rgba(102, 102, 102, 0.76);
+}
+
+.nft-balance {
+    margin-top: 4px;
     color: var(--text-color);
+    font-size: 24px;
 }
 
 .liquidity-icon {
@@ -226,13 +235,11 @@ h2 {
     transform: scale(1.3);
     transition: transform 0.3s ease;
     filter: brightness(0) saturate(100%) invert(27%) sepia(89%) saturate(2593%) hue-rotate(201deg) brightness(96%) contrast(97%);
-
 }
 
 .cart {
     position: relative;
 }
-
 
 .cart-count {
     position: absolute;
@@ -251,6 +258,35 @@ h2 {
     pointer-events: none;
 }
 
+.add-fund-btn {
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4e9eff;
+    border: none;
+    color: #fff;
+    padding: 12px 15px;
+    border-radius: 24px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    text-transform: uppercase;
+    width: 50%;
+}
 
+.all-level-list {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+    z-index: 99999;
+}
 
+.all-level-list.expanded {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 1000px;
+}
 
