--- a/styles/HistoryPageStyle.css
+++ b/styles/HistoryPageStyle.css
@@ -60,6 +60,7 @@
     background: none;
     border: none;
     font-size: 16px;
+    color: #1111;
     font-weight: bold;
     margin-bottom: 10px;
     cursor: pointer;
