--- a/styles/UserPageStyle.css
+++ b/styles/UserPageStyle.css
@@ -540,3 +540,28 @@
     display: inline-block;
 }
 
+.rent-summary-wrapper {
+    margin-top: 10px;
+    padding: 0 10px;
+    background-color: #4e9eff;
+
+    border-radius: 12px;
+    color: white;
+}
+
+.rent-summary-panel {
+    border-bottom: 1px solid #ccc;
+    padding: 0;
+    text-align: center;
+}
+
+
+.rent-summary-panel p {
+
+}
+
+.rent-summary-total {
+    font-weight: bold;
+    text-align: center;
+
+}
