--- a/styles/UserPageStyle.css
+++ b/styles/UserPageStyle.css
@@ -13,6 +13,13 @@
     align-items: center;
 }
 
+.no-rent-items {
+    background-color: var(--white);
+    border-radius: 10px;
+    box-shadow: 0 4px 12px var(--bg-color-light);
+    padding: 10px 20px;
+}
+
 .user-photo {
     width: 80px;
     height: 80px;
@@ -413,6 +420,8 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    padding: 16px 20px;
 }
 
 .purchase-history-card {
@@ -542,7 +551,7 @@
 
 .rent-summary-wrapper {
     margin-top: 10px;
-    padding: 0 10px;
+    padding: 0 20px;
     background-color: #4e9eff;
 
     border-radius: 12px;
@@ -555,13 +564,21 @@
     text-align: center;
 }
 
+.rent-summary-panel img,
+.rent-summary-total img {
+    width: 25px;
+}
 
 .rent-summary-panel p {
-
+    margin: 10px 0;
 }
 
 .rent-summary-total {
     font-weight: bold;
     text-align: center;
 
+}
+
+.rent-summary-total p {
+    margin: 10px 0;
 }
