--- a/styles/ProductDetailsStyle.css
+++ b/styles/ProductDetailsStyle.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: var(--white);
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 9998;
 
     display: none;
