--- a/styles/HistoryPageStyle.css
+++ b/styles/HistoryPageStyle.css
@@ -31,6 +31,11 @@
     padding: 16px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     align-items: center;
+    margin: 0 20px;
+}
+
+.history-item.limited {
+    box-shadow: 0 0 8px gold;
 }
 
 .history-image {
