--- a/styles/TrendingsPageStyle.css
+++ b/styles/TrendingsPageStyle.css
@@ -5,19 +5,22 @@
 }
 
 #trending-nfts .card {
-    background: rgb(255,253,194);
-    background: linear-gradient(90deg, rgba(255,253,194,1) 0%, rgba(255,224,0,1) 50%, rgba(255,253,194,1) 100%);
+    background-color: var(--white);
     border-radius: 12px;
-
-    /*background-image: url('/content/gold_texture.png');*/
-    background-size: cover;
-    background-position: center;
     box-shadow: 0 3px 8px var(--box-shadow-soft);
     padding: 10px;
     text-align: center;
     display: flex;
     flex-direction: column;
-    margin-bottom: 0
+    margin: 0;
+}
+
+#trending-nfts h2 {
+    margin-bottom: 30px;
+}
+
+#trending-nfts .card.limited{
+    box-shadow: 0 0 8px gold;
 }
 
 #trending-nfts .card img {
@@ -44,15 +47,21 @@
 #trending-nfts .card-btn {
     margin-top: auto;
     padding: 6px 12px;
-    background: rgb(255,253,194);
-    background: linear-gradient(90deg, rgba(255,253,194,1) 0%, rgba(255,224,0,1) 50%, rgba(255,253,194,1) 100%);
-    color: var(--black);
+    background: var(--primary);
+    color: var(--white);
     border: none;
     border-radius: 20px;
     cursor: pointer;
     transition: 0.3s;
     font-weight: bold;
     text-transform: capitalize;
+}
+
+#trending-nfts .card-btn.limited{
+
+    background: rgb(255,253,194);
+    background: linear-gradient(90deg, rgba(255,253,194,1) 0%, rgba(255,224,0,1) 50%, rgba(255,253,194,1) 100%);
+    color: var(--black);
 }
 
 #trending-nfts .price-icon {
