--- a/styles/UserPageStyle.css
+++ b/styles/UserPageStyle.css
@@ -499,7 +499,6 @@
 }
 
 .rent-price-display {
-
     background-color: var(--primary);
     border-radius: 12px;
     box-shadow: 0 4px 12px var(--bg-color-light);
@@ -509,7 +508,10 @@
     color: var(--white);
     white-space: nowrap;
     text-align: center;
+}
 
+.rent-price-display.limited {
+    background-color: gold;
 }
 
 .rent-now-btn {
