--- a/styles/ProductDetailsStyle.css
+++ b/styles/ProductDetailsStyle.css
@@ -209,3 +209,18 @@
     font-weight: bold;
 
 }
+
+/* Стили для ограниченных карточек */
+.purchased-item-card.limited {
+    border: 2px solid gold;
+    background-color: rgba(255, 215, 0, 0.05);
+    box-shadow: 0 0 10px gold;
+    position: relative;
+}
+
+.view-collection-btn.limited {
+    background-color: gold;
+    color: black;
+    border: 1px solid #c6a700;
+    box-shadow: 0 0 8px gold;
+}
