--- a/styles/CategoryPageStyle.css
+++ b/styles/CategoryPageStyle.css
@@ -157,7 +157,7 @@
 .slider-category-item.limited {
     box-shadow: 0 0 15px gold;
     border: 2px solid gold;
-    color: gold;
+    color: black;
 
 }
 
